--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 	 	
 	 	
 		<div class="player"> 
-			<audio preload="auto" controls id="player">
+			<audio preload="metadata" controls id="player">
 			  <source src="teaser/alone.mp3" type="audio/mpeg">
 			  <source src="teaser/alone.ogg" type="audio/ogg">
 			  <embed height="50" width="100" src="teaser/alone.mp3">
