--- a/index.html
+++ b/index.html
@@ -94,9 +94,8 @@
 	 	
 		<div class="player"> 
 			<audio preload="metadata" controls id="player">
-			  <source src="teaser/alone.mp3" type="audio/mpeg">
 			  <source src="teaser/alone.ogg" type="audio/ogg">
-			  <embed height="50" width="100" src="teaser/alone.mp3">
+			  <embed height="50" width="100" src="teaser/alone.ogg">
 			</audio>
 			<script>
 				var pl = document.getElementById("player"); 
