--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
 	 	
 		<div class="player"> 
 			<audio preload="metadata" controls id="player">
-			  <source src="teaser/alone.ogg" type="audio/ogg">
-			  <embed height="50" width="100" src="teaser/alone.ogg">
+			  <source src="teaser/alone1.ogg" type="audio/ogg">
+			  <embed height="50" width="100" src="teaser/alone1.ogg">
 			</audio>
 			<script>
 				var pl = document.getElementById("player"); 
