--- a/alone.html
+++ b/alone.html
@@ -86,7 +86,7 @@
 	 	<div class="continue">
 	    	if you're ready to see
 	    	<a href="#"> grana </a>
- 				<button onclick="play()">click here</button>
+ 				<button onclick="play()">click$$$$$$ here</button>
 	 	</div>	
 	 	
 	 	
