--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
 	 	<div class="continue">
 	    	if you're ready to see
 	    	<a href="#"> grana </a>
- 				<button onclick="play()">click here</button>
+ 				<button onclick="play()">click $$ here</button>
 	 	</div>	
 	 	
 	 	
