--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
+
+<meta property="og:url" content="http://naykiller.github.io/"/>
+<meta property="og:type" content="website"/>
+<meta property="og:title" content="GitHub de Nayara Ramos"/>
+<meta property="og:image" content="https://si0.twimg.com/profile_images/1676260952/myicon.png"/>
+<meta property="og:description" content="GitHub utilizado para projetos pessoais."/>
+<meta property="og:site_name" content="Nayara GitHub"/>
+
+
 <script src="teaser/js/jquery-1.9.1.min.js" />
 <script type="text/javascript" src="teaser/js/jPlayer/jquery.jplayer.min.js"></script>
 
@@ -215,7 +224,10 @@
 		       pl.play(); 
 		      }
 			</script>
-		</div>	 	
+		</div>
+		
+		
+		<iframe src="http://www.facebook.com/plugins/like.php?href=http://naykiller.github.io&send=false&layout=button_count&width=450&show_faces=false&font&colorscheme=light&action=like&height=21" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:450px; height:21px;" allowTransparency="true"></iframe>
 	 	
 	</body>
 </html>
