--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
 			</script>
 		</div>
 		
-		
+		Teste do Like
 		<iframe src="http://www.facebook.com/plugins/like.php?href=http://naykiller.github.io&send=false&layout=button_count&width=450&show_faces=false&font&colorscheme=light&action=like&height=21" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:450px; height:21px;" allowTransparency="true"></iframe>
 	 	
 	</body>
