--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 </head>
 	<body>
 	 	
-	 	  
-		<iframe src="http://www.facebook.com/plugins/like.php?href=http://naykiller.github.io&send=false&layout=button_count&width=450&show_faces=false&font&colorscheme=light&action=like&height=21" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:450px; height:21px;" allowTransparency="true"></iframe>
+	 	  oi
+		<iframe src="http://www.facebook.com/like.php?href=http://naykiller.github.io&send=false&layout=button_count&width=450&show_faces=false&font&colorscheme=light&action=like&height=21" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:450px; height:21px;" allowTransparency="true">aaaa</iframe>
 		
 	 	
 	</body>
