--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
-<html><b><font size="15">$$$$$$$$$$$$$$$</font><br><br></b>
-<font color="#FFFFFF">Nível 99<br>Venceu: </font><font color="#01f101">666</font><font color="#FFFFFF"> (Ranqueada)</font><br><font color="#ca7e03"><b>Tier colinas da raposa de fogo</b></font><br><br><font color="#e6e438">Jogando<br>Jogando como: Ao Shin<br>por 12 minutos.</font><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+<b><font size="15">$$$$$$$$$</font><br><br></b>
+<font color="#FFFFFF">Nível 99<br>Venceu: </font><font color="#01f101">666</font><font color="#FFFFFF"> (Ranqueada)</font><br><font color="#ca7e03"><b>Latão XI</b><br>Mercenários de Ahri</font><br><br><font color="#e6e438">Jogando<br>Jogando como: Blastoise<br>por 23 minutos.</font><!---
